--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <title>CSE IIT Patna</title>
-
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-
+	<link rel="stylesheet" href="assets/css/mobile.css" media="only screen and (max-width: 567px)">
+	<link rel="stylesheet" href="assets/css/desktop.css" media="only screen and (min-width: 567px)">
     <!-- Material Design Bootstrap -->
     <link href="assets/css/mdb.min.css" rel="stylesheet">
 
@@ -58,11 +59,24 @@
 		}
 		#bannerimg:hover{
         	box-shadow: 0 0 50px #0d47a1;
-  			-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-    		filter: grayscale(100%);
+  			-webkit-filter: grayscale(50%); /* Safari 6.0 - 9.0 */
+    		filter: grayscale(50%);
         }
     </style>
-
+	<script>
+		$(document).ready(function(){
+			function navbaroptoggle(){
+				if($(".navbar-nav").css('opacity')==0){
+					$(".navbar-nav").delay(500).animate({'opacity':'1'});
+				} else {
+					$(".navbar-nav").animate({'opacity':'0'});
+				}
+			}
+				$(".navbar-toggler").click(function(){
+					navbaroptoggle();
+				});
+		});
+	</script>
 </head>
 
 <body>
@@ -72,7 +86,8 @@
 
         <!--Navbar-->
         <nav class="navbar navbar-dark primary-color-dark">
-
+			 <!--Navbar Brand-->
+                    <a class="navbar-brand mob-brand" href="#" target="_blank"><img src="https://img.collegepravesh.com/2014/10/IIT-Patna-Logo.png" style="height: 35px">&nbsp;&nbsp;CSE IIT Patna</a>
             <!-- Collapse button-->
             <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#collapseEx">
                 <i class="fa fa-bars"></i>
@@ -83,8 +98,9 @@
                 <!--Collapse content-->
                 <div class="collapse navbar-toggleable-xs" id="collapseEx">
                     <!--Navbar Brand-->
-                    <a class="navbar-brand" href="#" target="_blank"><img src="https://img.collegepravesh.com/2014/10/IIT-Patna-Logo.png" style="height: 35px">&nbsp;&nbsp;CSE IIT Patna</a>
+                    <a class="navbar-brand desk-brand" href="#" target="_blank"><img src="https://img.collegepravesh.com/2014/10/IIT-Patna-Logo.png" style="height: 35px">&nbsp;&nbsp;CSE IIT Patna</a>
                     <!--Links-->
+                    <span id="breakline" style="display: none"><br><br><br></span>
                     <ul class="nav navbar-nav">
                         <li class="nav-item active">
                             <a class="nav-link" href="#">Intro <span class="sr-only">(current)</span></a>
@@ -125,6 +141,7 @@
 	
 	
 	</div>
+	<span id="breakline" style="display: none"><br></span>
 	<img src="img/banner.jpg" id="bannerimg"  />
 	</center>
 	
